aneeshbhat1-Salesforce/src/objects/TemplateSetting__c.object
<CustomObject>
    <fields>
        <fullName>AgeFrom__c</fullName>
        <label>AgeFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_To__c</fullName>
        <label>To</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Based_On1__c</fullName>
        <label>Based On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>DOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Based_On__c</fullName>
        <label>Based On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Office</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Brochure_To_Send__c</fullName>
        <label>Extra Brochure To Send</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AY</fullName>
                </value>
                <value>
                    <fullName>MLY</fullName>
                </value>
                <value>
                    <fullName>PRW</fullName>
                </value>
                <value>
                    <fullName>EFC</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostalCode_To__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code_From__c</fullName>
        <label>Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Brochures__c</fullName>
        <label>Requested Brochures</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AY</fullName>
                </value>
                <value>
                    <fullName>MLY</fullName>
                </value>
                <value>
                    <fullName>PRW</fullName>
                </value>
                <value>
                    <fullName>EFC</fullName>
                </value>
                <value>
                    <fullName>LOCAL</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
                <value>
                    <fullName>HSY</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <label>TemplateId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Name</label>
        <referenceTo>Look_Up__c</referenceTo>
        <relationshipLabel>TemplateSettings</relationshipLabel>
        <relationshipName>TemplateSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>TemplateSetting__c</referenceTo>
        <relationshipLabel>TemplateSettings</relationshipLabel>
        <relationshipName>Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Template Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TemplateSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>